10-1-20 Login Form Validation

--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -47,6 +47,14 @@ footer {
     font-size: 1.5em;
 }
 
+#logout-btn{
+    color: #F98E2C;
+    background-color: #ffffff;
+    border-color: #F98E2C;
+    font-weight: bold;
+    letter-spacing: 0.05em;
+}
+
 ul li {
     list-style-type: none;
 }
@@ -76,4 +84,33 @@ ul li {
         height: auto;
     }
 } 
+
+
+/* Errors */
+
+.errors {
+    /* display: inline-block; */
+    border: 2px solid red;
+    color: red;
+    padding: 1em;
+    margin-bottom: 1em;
+    list-style-type: disc;
+    
+  }
+  
+  .errors ul {
+    margin-bottom: 0;
+    padding-left: 1em;
+  }
+  
+  /* Session Messages */
+  
+  #message {
+    color: #0055DD;
+    background: white;
+    border: 2px solid #0055DD;
+    padding: 1em 15px;
+    margin: 1em auto;
+    text-align: center;
+  }
 
