--- a/dev/public/css/hr_custom.css
+++ b/dev/public/css/hr_custom.css
@@ -11,10 +11,14 @@ body {
     padding-top: 100px;
 }
 
-
-
 #content{
   min-height: calc(100vh - 300px);
+}
+
+.doc_status p{
+  font-size: 1.2em;
+  font-weight: 500;
+  color:  green;
 }
 
 .form-control{
@@ -23,6 +27,10 @@ body {
 
 .form-group label{
   font-size: 1.25em;
+}
+
+#last_name{
+  padding-left: .25em;
 }
 
 #logout-btn{
