11-13-20 Cand fixed box visibility and status

--- a/dev/public/css/cards.css
+++ b/dev/public/css/cards.css
@@ -49,3 +49,8 @@
     background-color: #D8D8D8;
     font-weight: bold;
   }
+
+  .c-card-10{
+    background-color: #F28B30;
+    font-weight: bold;
+  }
