11-16-20 Candidate page complete

--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -15,6 +15,12 @@ body {
     outline: none;
 }
 
+.doc_status {
+    font-size: 2em;
+    font-weight: bold;
+    padding-top: 20px;
+}
+
 footer {
     height: 200px;
     bottom: 0px;
