--- a/dev/public/css/hr_custom.css
+++ b/dev/public/css/hr_custom.css
@@ -223,3 +223,24 @@ div #top_ribbon .row {
     margin: 1em auto;
     text-align: center;
   }
+
+  /* Document Status Coloring */
+  .doc_status.submitted {
+    background-color: rgba(91,192,222,0.6);
+    font-weight: 500;
+  }
+
+  .doc_status.correction {
+    background-color: rgba(255,0,0,0.6);
+    font-weight: 500;
+  }
+
+  .doc_status.completed {
+    background-color: rgba(92, 184, 92, 0.6);
+    font-weight: 500;
+  }
+
+  .doc_status.processing {
+    background-color: rgba(249, 142, 44, 0.6);
+    font-weight: 500;
+  }
