--- a/dev/public/css/hr_custom.css
+++ b/dev/public/css/hr_custom.css
@@ -225,22 +225,22 @@ div #top_ribbon .row {
   }
 
   /* Document Status Coloring */
-  .doc_status.submitted {
+  .doc_status.Submitted {
     background-color: rgba(91,192,222,0.6);
     font-weight: 500;
   }
 
-  .doc_status.correction {
+  .doc_status.Correction {
     background-color: rgba(255,0,0,0.6);
     font-weight: 500;
   }
 
-  .doc_status.completed {
+  .doc_status.Completed {
     background-color: rgba(92, 184, 92, 0.6);
     font-weight: 500;
   }
 
-  .doc_status.processing {
+  .doc_status.Processing {
     background-color: rgba(249, 142, 44, 0.6);
     font-weight: 500;
   }
