--- a/dev/public/css/cards.css
+++ b/dev/public/css/cards.css
@@ -1,56 +1,65 @@
 .c-card-1{
-    background-color: #F28B30;
+    background-color:rgba(249, 142, 44, .75);
+    color: white; 
     font-weight: bold;
   }
   
   .c-card-2{
-    background-color: #F2E205;
+    background-color:  rgba(0, 59, 73, .75);
+    color: white; 
     font-weight: bold;
   }
   
   .c-card-3{
-    background-color: #F20505;
+    background-color: rgba(0, 0, 0, .75);
+    color: white; 
     font-weight: bold;
   }
   
   .c-card-4{
-    background-color: #0D0D0D;
+    background-color: rgba(249, 142, 44, .75);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-5{
-    background-color: #F2E205;
+    background-color: rgba(0, 59, 73, .75);
+    color: white; 
     font-weight: bold;
   }
   
   .c-card-6{
-    background-color: #F28B30;
+    background-color:rgba(0, 0, 0, .75);
+    color: white; 
     font-weight: bold;
   }
   
   .c-card-7{
-    background-color: #F2E205;
+    background-color: rgba(249, 142, 44, .75);
+    color: white; 
     font-weight: bold;
   }
   
   .c-card-8{
-    background-color: #F20505;
+    background-color:rgba(0, 59, 73, .75);
+    color: white; 
     font-weight: bold;
   }
   
   .c-card-9{
-    background-color: #0D0D0D;
+    background-color:rgba(0, 0, 0, .75);
     color: white;
     font-weight: bold;
   }
 
   .c-card-10{
-    background-color: #D8D8D8;
+    background-color:rgba(249, 142, 44, .75);
+    color: white; 
     font-weight: bold;
   }
 
-  .c-card-10{
-    background-color: #F28B30;
+  .c-card-11{
+    background-color: rgba(0, 59, 73, .75);
+    color: white; 
     font-weight: bold;
   }
