12-15-20 Fixed email returning blank, backlog

--- a/dev/public/css/hr_custom.css
+++ b/dev/public/css/hr_custom.css
@@ -143,6 +143,10 @@ body {
   background-color: transparent;
 }
 
+footer #footer_tagline{
+  font-size: 1.75rem;
+}
+
 .form-control{
   font-size: 1.1em;
   background-color: transparent;
