--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Calibri, sans-serif;
+    font-family: myriad-pro, "Calibri", sans-serif;
     
 }
 
@@ -48,7 +48,8 @@ footer #footer_tagline{
 }
 
 .jumbotron {
-    background-color: rgba(249, 142, 44, .75);
+    background-color: rgba(249, 142, 44);
+    color: white;
     padding-top: 10px;
 }
 
