12-21-20 Start admin dashboard

--- a/dev/public/css/cards.css
+++ b/dev/public/css/cards.css
@@ -1,65 +1,65 @@
 .c-card-1{
-    background-color:rgba(249, 142, 44, .75);
+    background-color:rgba(249, 142, 44);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-2{
-    background-color:  rgba(0, 59, 73, .75);
+    background-color:  rgba(0, 59, 73);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-3{
-    background-color: rgba(0, 0, 0, .75);
+    background-color: rgba(0, 0, 0);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-4{
-    background-color: rgba(249, 142, 44, .75);
+    background-color: rgba(249, 142, 44);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-5{
-    background-color: rgba(0, 59, 73, .75);
+    background-color: rgba(0, 59, 73);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-6{
-    background-color:rgba(0, 0, 0, .75);
+    background-color:rgba(0, 0, 0);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-7{
-    background-color: rgba(249, 142, 44, .75);
+    background-color: rgba(249, 142, 44);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-8{
-    background-color:rgba(0, 59, 73, .75);
+    background-color:rgba(0, 59, 73);
     color: white; 
     font-weight: bold;
   }
   
   .c-card-9{
-    background-color:rgba(0, 0, 0, .75);
+    background-color:rgba(0, 0, 0);
     color: white;
     font-weight: bold;
   }
 
   .c-card-10{
-    background-color:rgba(249, 142, 44, .75);
+    background-color:rgba(249, 142, 44);
     color: white; 
     font-weight: bold;
   }
 
   .c-card-11{
-    background-color: rgba(0, 59, 73, .75);
+    background-color: rgba(0, 59, 73);
     color: white; 
     font-weight: bold;
   }
