4-20-21 Completed notes area

--- a/dev/public/css/hr_custom.css
+++ b/dev/public/css/hr_custom.css
@@ -143,6 +143,16 @@ body {
   background-color: transparent;
 }
 
+#edit-form textarea {
+  border-top-style: hidden;
+  border-bottom-style: dashed 1px #0088cc;
+  border-left-style: hidden;
+  border-right-style: hidden;
+  color: black;
+  text-align: center;
+  background-color: transparent;
+}
+
 footer #footer_tagline{
   font-size: 1.75rem;
 }
