--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -33,7 +33,7 @@ body::-webkit-scrollbar {
 }
 
 #content{
-    min-height: calc(100vh - 350px);
+    min-height: calc(100vh - 400px);
 }
 
 
@@ -53,7 +53,7 @@ body::-webkit-scrollbar {
 }
 
 footer {
-    height: 200px;
+    height: 275px;
     bottom: 0px;
     width: 100%;
 
@@ -62,6 +62,10 @@ footer {
 footer #footer_tagline{
     font-size: 1.75rem;
 }
+
+footer #footer_disclaimer{
+    font-size: 1rem;
+  }
 
 #ii_list ul li{
     text-align: left;
@@ -146,7 +150,7 @@ label.panel-info{
 
 @media screen and (max-width:991px){
     footer {
-        height: 300px;
+        height: 350px;
         bottom: 0px;
     
     }
@@ -158,7 +162,7 @@ label.panel-info{
         padding-top: 200px;
     }
     footer {
-        height: 300px;
+        height: 350px;
         bottom: 0px;
     
     }
